--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@ include "includes/navigation.html"
                 </div>
                 <div class="terminal">
                     <code class="code-wrapper"><span class="code-title"># Add this to .bashrc or .zshrc or its equivalent</span>
-                        transfer(){ if [ $# -eq 0 ];then echo &quot;No arguments specified.\nUsage:\n  transfer &lt;file|directory&gt;\n  ... | transfer &lt;file_name&gt;&quot;&gt;&amp;2;return 1;fi;if tty -s;then file=&quot;$1&quot;;file_name=$(basename &quot;$file&quot;);if [ ! -e &quot;$file&quot; ];then echo &quot;$file: No such file or directory&quot;&gt;&amp;2;return 1;fi;if [ -d &quot;$file&quot; ];then file_name=&quot;$file_name.zip&quot; ,;(cd &quot;$file&quot;&amp;&amp;zip -r -q - .)|curl --progress-bar --upload-file &quot;-&quot; &quot;{{.WebAddress}}$file_name&quot;|tee /dev/null,;else cat &quot;$file&quot;|curl --progress-bar --upload-file &quot;-&quot; &quot;{{.WebAddress}}$file_name&quot;|tee /dev/null;fi;else file_name=$1;curl --progress-bar --upload-file &quot;-&quot; &quot;{{.WebAddress}}$file_name&quot;|tee /dev/null;fi;}
+                        transfer(){ if [ $# -eq 0 ];then echo &quot;No arguments specified.\nUsage:\n  transfer &lt;file|directory&gt;\n  ... | transfer &lt;file_name&gt;&quot;&gt;&amp;2;return 1;fi;if tty -s;then file=&quot;$1&quot;;file_name=$(basename &quot;$file&quot;);if [ ! -e &quot;$file&quot; ];then echo &quot;$file: No such file or directory&quot;&gt;&amp;2;return 1;fi;if [ -d &quot;$file&quot; ];then file_name=&quot;$file_name.zip&quot; ,;(cd &quot;$file&quot;&amp;&amp;zip -r -q - .)|curl --progress-bar --upload-file &quot;-&quot; &quot;{{.WebAddress}}$file_name&quot;|tee /dev/null,;else cat &quot;$file&quot;|curl --progress-bar --upload-file &quot;-&quot; &quot;{{.WebAddress}}$file_name&quot;|tee /dev/null;fi;else file_name=$1;curl --progress-bar --upload-file &quot;-&quot; &quot;{{.WebAddress}}$file_name&quot;|tee /dev/null;fi;echo "";}
 
                         <span class="code-title"># Now you can use transfer function</span>
                         $ transfer hello.txt
@@ -403,81 +403,6 @@ goto main
         <a class="github-button" href="https://github.com/dutchcoders/transfer.sh" data-size="large" data-show-count="true" aria-label="Star dutchcoders/transfer.sh on GitHub">Star</a>
     </div>
 </section>
-<section id="reviews">
-    <div class="wrapper">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 col-xs-12">
-                <blockquote class="twitter-tweet tweet-xl" lang="en">
-                    <a href="https://twitter.com/FloifyDave/status/517383101425516544">
-                        <img class="twitter-profile" src="images/reviews/dave.jpg" alt="">
-                    </a>
-                    <p><a href="https://twitter.com/dutchcoders">@dutchcoders</a> Thanks for transfer.sh. Just used it for a production purpose for a customer. So great, so easy, so https. :)</p>
-                    <a href="https://twitter.com/FloifyDave/status/517383101425516544">
-                        &mdash; Dave Sims (@FloifyDave)</a>
-                </blockquote>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <blockquote class="twitter-tweet" lang="en">
-                    <a href="https://twitter.com/kareemk/status/517029789191118849">
-                        <img class="twitter-profile" src="images/reviews/kareem.jpg" alt="">
-                    </a>
-                    <p><a href="https://twitter.com/dutchcoders">@dutchcoders</a> love transfer.sh! any change we can *pay* for a self-hosted version?</p><a href="https://twitter.com/kareemk/status/517029789191118849">&mdash; Kareem Kouddous (@kareemk) </a>
-                </blockquote>
-            </div>
-            <div class="col-md-6 col-xs-12">
-                <blockquote class="twitter-tweet" lang="en">
-                    <a href="https://twitter.com/drakpz/status/517008058841829376">
-                        <img class="twitter-profile" src="images/reviews/pg.jpeg" alt="">
-                    </a>
-                    <p><a href="http://t.co/JomAmqWYEB">http://t.co/JomAmqWYEB</a> by <a href="https://twitter.com/dutchcoders">@dutchcoders</a> is pure awesomeness! any chance of source on github? :-)</p><a href="https://twitter.com/drakpz/status/517008058841829376">&mdash; PJ Spagnolatti (@drakpz)</a>
-                </blockquote>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <blockquote class="twitter-tweet" lang="en">
-                    <a href="https://twitter.com/jacoblindgren11/status/516975006501203968">
-                        <img class="twitter-profile" src="images/reviews/jacob.jpg" alt="">
-                    </a>
-                    <p>Love transfer.sh! Will be using it from now on! Thanks for the amazing service we can use from the CLI <a href="https://twitter.com/dutchcoders">@dutchcoders</a>
-                    </p><a href="https://twitter.com/jacoblindgren11/status/516975006501203968">&mdash; Jacob Lindgren (@jacoblindgren11) </a>
-                </blockquote>
-            </div>
-            <div class="col-md-6 col-xs-12">
-                <blockquote class="twitter-tweet" lang="en">
-                    <a href="https://twitter.com/arvestad/status/519507976491499521">
-                        <img class="twitter-profile" src="images/reviews/lars.jpg" alt="">
-                    </a>
-                    <p>transfer.sh is my latest fav service! Try simple command-line and web file sharing! <a href="https://t.co/FSrsb1JKJd">https://t.co/FSrsb1JKJd</a>&#10;Thanks <a href="https://twitter.com/dutchcoders">@dutchcoders</a> !</p> <a href="https://twitter.com/arvestad/status/519507976491499521">&mdash; Lars Arvestad (@arvestad)</a>
-                </blockquote>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-
-<section id="share">
-    <div class="wrapper">
-        <h2 class="page-title">Share the love</h2>
-        <ul class="share-buttons">
-            <li>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Ftransfer.sh&t=" target="_blank" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent(document.URL)); return false;"> <i class="icon-facebook"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Ftransfer.sh&text=:%20http%3A%2F%2Ftransfer.sh" target="_blank" title="Tweet" onclick="window.open('https://twitter.com/intent/tweet?text=' + encodeURIComponent(document.title) + ':%20'  + encodeURIComponent(document.URL)); return false;"> <i class="icon-twitter"></i>
-            </li>
-            <li>
-                <a href="http://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Ftransfer.sh&title=&summary=&source=http%3A%2F%2Ftransfer.sh" target="_blank" title="Share on LinkedIn" onclick="window.open('http://www.linkedin.com/shareArticle?mini=true&url=' + encodeURIComponent(document.URL) + '&title=' +  encodeURIComponent(document.title)); return false;"> <i class="icon-linkedin"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
-</section>
-
 
 <section id="contact">
     <div class="wrapper">
@@ -485,7 +410,7 @@ goto main
         <h2 class="page-title">
             Any questions?
         </h2>
-        <a href="mailto:{{.EmailContact}}" data-uv-trigger class="btn-cta">contact us</a>
+        <a href="mailto:{{.EmailContact}}" data-uv-trigger class="btn-cta">Contact us</a>
     </div>
 </section>
 
